# animalsgonewild

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: animalClassifier.py  animalType.py  textTransformer.py  wordcloud.ipynb  wordcloud.py  wordcloud_new.py
src/animalsgonewild/: __init__.py  animalsgonewild.py
src/animalsgonewild/images/: monkey2.jfif
tests/: test_animalClassifier.py  test_animalType.py  test_animalsgonewild.py  test_textTransformer.py  test_wordCloud.py
