[tool.poetry]
name = "animalsgonewild"
version = "0.1.0"
description = "Behaves like the text equivalent of an animal inspired Instagram filter"
authors = ["DSCI 524 - Team 16"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Pillow = "^9.0.0"
wordcloud = "^1.8.1"
nltk = "^3.6.7"
newspaper3k = "^0.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
